Fix desktop version content overflow of details popout

--- a/css/styles.css
+++ b/css/styles.css
@@ -459,7 +459,7 @@ footer .social-media-iconlist {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  border-radius: 1em;
+  border-radius: 0.7em;
   background-color: white;
   justify-items: flex-start;
 }
@@ -634,53 +634,23 @@ footer .social-media-iconlist {
     display: none;
   }
 
-  .details-popout {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(193, 199, 208, 0.9);
-  }
-
   .details-popout .inner-details {
-    position: absolute;
     width: calc(100% - 3em);
-    max-height: 60em;
+    max-height: 50em;
     max-width: 42em;
     padding: 1.3em;
-    display: flex;
     flex-wrap: wrap;
-    border-radius: 1em;
-    background-color: white;
+    flex-direction: row;
+    overflow-y: auto;
   }
 
-  .inner-details .details-close-container {
-    width: 100%;
-    margin-bottom: 0.5em;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .inner-details .details-close-container img {
-    height: 2em;
-    cursor: pointer;
+  .details-close-container {
+    position: sticky;
+    top: 0;
   }
 
   .inner-details .details-img-container {
-    width: 100%;
-    height: auto;
-    border-radius: 1em;
-    margin-bottom: 1.5em;
-    overflow: hidden;
-  }
-
-  .inner-details .details-img-container img {
-    width: 100%;
-    height: 100%;
+    margin-top: 0;
   }
 
   .inner-details .details-header {
@@ -691,26 +661,12 @@ footer .social-media-iconlist {
     font-weight: 700;
   }
 
-  .details-header ul {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.5em;
-    margin-top: 1em;
-  }
-
-  .details-header ul li {
-    font-size: 0.7em;
-    padding: 0.8em;
-    border-radius: 0.5em;
-    background-color: #ebecf0;
-  }
-
   .inner-details .details-buttons {
     flex: 1 1 35%;
     display: flex;
-    gap: 0.6em;
     justify-content: end;
     align-items: flex-start;
+    margin-top: 0;
     order: 0;
   }
 
@@ -718,6 +674,7 @@ footer .social-media-iconlist {
     color: #344563;
     line-height: 1.5em;
     margin-top: 1.5em;
+    margin-bottom: 1.2em;
   }
 
   .green-icon-button {
